Refactored creating jwt token.

--- a/BattleShip.Api/appsettings.json
+++ b/BattleShip.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Initial Catalog=dbname;MultipleActiveResultSets=true;User ID=sa;Password=mypass"
+  },
+  "Jwt": {
+    "Key": "A;L%Aq}E;(s8Qqf`",
+    "Issuer": "http://localhost:5036",
+    "Audience": "http://localhost:5036",
+    "Lifetime": 5
+  }
 }
