--- a/BattleShip.Api/Properties/launchSettings.json
+++ b/BattleShip.Api/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:8929",
-      "sslPort": 44312
+      "sslPort": 0
     }
   },
   "profiles": {
     "BattleShip.Api": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7036;http://localhost:5036",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5036",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
