--- a/BattleShip.Api/appsettings.json
+++ b/BattleShip.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=dbname;MultipleActiveResultSets=true;User ID=sa;Password=mypass"
+    "BattleShipDB": "Data Source=MEDVED; Initial Catalog=BattleShipDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "Key": "A;L%Aq}E;(s8Qqf`",
