Small fixing on loging and registration.

--- a/BattleShip.Api/appsettings.json
+++ b/BattleShip.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BattleShipDB": "Data Source=MEDVED; Initial Catalog=BattleShipDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BattleShipDB": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=BattleShipDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "Key": "A;L%Aq}E;(s8Qqf`",
